Update and add missing specialties.